CesiumBase project refactoring and restructure of directory